--- a/films/kiki1.html
+++ b/films/kiki1.html
@@ -2,46 +2,492 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Test VAST Ad ExoClick</title>
-  <link href="https://vjs.zencdn.net/7.20.3/video-js.css" rel="stylesheet">
-  <script src="https://vjs.zencdn.net/7.20.3/video.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/videojs-contrib-ads@6.9.0/dist/videojs-contrib-ads.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/videojs-ima@1.9.0/dist/videojs.ima.min.js"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Regarder Kiki 1 - Film Kabyle Fantastique en Streaming HD | Amazigh TV</title>
+  <meta name="description" content="Regarder Kiki 1 en streaming HD gratuit. Film fantastique kabyle complet de 75 minutes. Aventure magique en terre Amazigh.">
+  <meta property="og:title" content="Kiki 1 - Film Kabyle Fantastique Gratuit | Amazigh TV">
+  <meta property="og:description" content="Film fantastique et comique kabyle Kiki 1 en streaming HD. Durée: 75 min. Genre: Fantastique.">
+  <meta property="og:image" content="../images/kiki1.jpg">
+  <meta property="og:url" content="https://amazigh-tv.vercel.app/films/kiki1.html">
+  <meta property="og:type" content="video.movie">
+
+  <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, kiki 1, narnia 2, crek1, pucci, qezbul, li mucucu">
+  <meta name="author" content="Amazigh TV">
+
+
+  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/kiki1.html">
+  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/logo-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/logo-180.png">
+
+  
+  <link rel="canonical" href="https://amazigh-tv.vercel.app/films/kiki1.html" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:wght@400;700;900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+  <script type="text/javascript" src="//ads.vidoomy.com/amazigh-tvvercelapp_26776.js" ></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2L50HTQ2Z6"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-2L50HTQ2Z6');
+  </script>
 
   <style>
-    body {
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      flex-direction: column;
-      color: #eee;
-      font-family: sans-serif;
+    .film-page-hero {
+        position: relative; 
+        min-height: 60vh;
+        background: linear-gradient(rgba(0,0,0,0.85), rgba(0,0,0,0.9)), 
+                    url('../images/kiki1.jpg') center center/cover no-repeat;
+        display: flex; 
+        align-items: center; 
+        padding: 120px 40px 60px;
     }
-    .video-js {
-      width: 640px;
-      height: 360px;
+    .film-page-hero::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(0,0,0,0.6);
+        backdrop-filter: blur(5px);
+        z-index: 0;
+    }
+    .film-details-container {
+        position: relative; 
+        z-index: 2; 
+        display: flex; 
+        gap: 40px;
+        max-width: 1200px; 
+        margin: auto;
+        align-items: flex-start;
+    }
+    .film-poster-large { 
+        width: 300px; 
+        flex-shrink: 0; 
+        border-radius: 12px; 
+        box-shadow: 0 15px 40px rgba(0,0,0,0.8);
+    }
+    .film-poster-large img { 
+        width: 100%; 
+        display: block; 
+        border-radius: 12px; 
+    }
+    .film-info-main h1 { 
+        font-family: 'Bebas Neue', cursive; 
+        font-size: 4em; 
+        color: var(--color-primary); 
+        margin-bottom: 15px;
+        text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
+    }
+    .film-info-main .metadata { 
+        font-size: 1.1em; 
+        margin-bottom: 25px; 
+        color: #e0e0e0;
+        display: flex;
+        gap: 20px;
+        flex-wrap: wrap;
+    }
+    .film-info-main .metadata span {
+        background: rgba(229, 9, 20, 0.2);
+        padding: 5px 12px;
+        border-radius: 20px;
+        border: 1px solid rgba(229, 9, 20, 0.3);
+    }
+    .film-info-main .description { 
+        font-size: 1.2em; 
+        margin-bottom: 35px; 
+        line-height: 1.7;
+        color: #f0f0f0;
+        max-width: 600px;
+    }
+    .video-section { 
+        padding: 50px 40px; 
+        max-width: 1100px; 
+        margin: 0 auto; 
+        background: var(--color-background);
+    }
+    .video-section h3 { 
+        font-size: 2.2em; 
+        margin-bottom: 25px; 
+        border-left: 4px solid var(--color-primary); 
+        padding-left: 15px;
+        color: #ffffff;
+    }
+
+    /* Bouton hero SIMPLE et FONCTIONNEL */
+    .hero-play-button {
+        padding: 15px 35px;
+        border-radius: 8px;
+        font-size: 1.3em;
+        text-transform: uppercase;
+        font-weight: 800;
+        background-color: rgba(255,255,255,0.95);
+        color: #0d0d0d;
+        box-shadow: 0 8px 25px rgba(0,0,0,0.3);
+        margin: 0;
+        border: none;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        position: relative; 
+        z-index: 10;
+    }
+    .hero-play-button:hover { 
+        background-color: #ffffff;
+        transform: translateY(-2px);
+        box-shadow: 0 12px 30px rgba(0,0,0,0.4);
+    }
+    .hero-play-button:active { 
+        transform: translateY(0); 
+    }
+    .hero-play-button i.play-icon { 
+        font-size: 1.4em; 
+        color: #e50914; 
+        margin-right: 12px; 
+    }
+
+    /* Overlay vidéo */
+    #video-play-overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.6);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        z-index: 5;
+        transition: opacity 0.3s ease;
+        border-radius: 8px;
+    }
+    #video-play-overlay:hover {
+        background-color: rgba(0, 0, 0, 0.8);
+    }
+    #video-play-overlay .play-icon-lg {
+        font-size: 5em;
+        color: var(--color-primary);
+        text-shadow: 0 0 20px rgba(0,0,0,0.5);
+    }
+
+    /* Section films suggérés */
+    .suggested-films {
+        background: var(--color-background);
+        padding: 50px 40px;
+    }
+
+    @media (max-width: 768px) {
+        .film-page-hero { 
+            padding: 100px 20px 40px; 
+            min-height: 70vh;
+        }
+        .film-details-container { 
+            flex-direction: column; 
+            text-align: center; 
+            align-items: center;
+            gap: 30px;
+        }
+        .film-poster-large { 
+            width: 80%; 
+            max-width: 280px; 
+            margin-bottom: 25px; 
+        }
+        .film-info-main h1 { 
+            font-size: 3em; 
+        }
+        .film-info-main .metadata {
+            justify-content: center;
+            gap: 10px;
+        }
+        .film-info-main .description {
+            font-size: 1.1em;
+            padding: 0 10px;
+        }
+        .hero-play-button { 
+            font-size: 1.1em; 
+            padding: 14px 28px; 
+            width: 100%;
+            max-width: 300px;
+        }
+        .video-section {
+            padding: 30px 15px;
+        }
+        .video-section h3 {
+            font-size: 1.8em;
+            padding: 0 15px;
+        }
+        .suggested-films {
+            padding: 30px 15px;
+        }
+        .film-grid {
+            grid-template-columns: repeat(2, 1fr);
+            gap: 15px;
+        }
+    }
+
+    @media (max-width: 480px) {
+        .film-info-main h1 { 
+            font-size: 2.5em; 
+        }
+        .film-poster-large { 
+            width: 90%; 
+        }
+        .film-grid {
+            grid-template-columns: 1fr;
+        }
+        .hero-play-button { 
+            font-size: 1em; 
+            padding: 12px 24px; 
+        }
+    }
+
+    .video-section {
+      padding-bottom: 40px;
+    }
+
+    .film-list-section {
+      margin-top: 0;
     }
   </style>
 </head>
 <body>
-  <h2>🎬 Test Lecture VAST ExoClick</h2>
-  <video id="my-video" class="video-js vjs-default-skin" controls preload="auto">
-    <source src="" type="video/mp4">
-  </video>
 
-  <script>
-    const player = videojs('my-video');
+<header class="header">
+  <a href="index.html" class="logo">
+    <img src="../images/logo-180.png" alt="Logo Amazigh TV" class="logo-image">
+    <span>Amazigh TV</span>
+</a>
+  <nav class="navigation">
+    <a href="../index.html"><i class="fas fa-home"></i> Accueil</a>
+    <a href="../films.html" class="nav-active"><i class="fas fa-film"></i> Courts Métrages</a>
+    <a href="../contact.html"><i class="fas fa-envelope"></i> Contact</a>
+  </nav>
+</header>
 
-    player.ima({
-      adTagUrl: 'https://s.magsrv.com/v1/vast.php?idzone=5756872'
-    });
+<main class="main-content">
 
-    player.ready(() => {
-      player.ima.requestAds();
-      player.play();
-    });
+  <section class="film-page-hero">
+    <div class="film-details-container">
+        <div class="film-poster-large">
+            <img src="../images/kiki1.jpg" alt="Affiche du film Kiki 1 - Film fantastique et comeédie en kabyle">
+        </div>
+        <div class="film-info-main">
+            <h1>Kiki 1</h1>
+            <div class="metadata">
+                <span><i class="fas fa-tags"></i> Fantastique</span>
+                <span><i class="fas fa-clock"></i> 75 min</span>
+                <span><i class="fas fa-star"></i> 4.5/5</span>
+                <span><i class="fas fa-eye"></i> HD</span>
+            </div>
+            <p class="description"> Kiki un jeune garçon malin, prouve que l’intelligence vaut mieux que la force brute. Quand son village est menacé, Vic use de ruse et d’ingéniosité pour sauver les siens. Entre humour nordique et aventures maritimes, il fait chavirer les clichés sur les Vikings. Petit par la taille, mais géant par le cerveau.</p>
+            <button class="hero-play-button" data-video-id="video-kiki1">
+                <i class="fas fa-play play-icon"></i> LANCER LE FILM
+            </button>
+        </div>
+    </div>
+  </section>
+
+<section class="video-section">
+    <h3>Regarder Kiki 1 en Streaming HD</h3> <div class="player-selector" id="player-selector">
+        <button class="player-button active" data-player-id="dood">
+            <i class="fas fa-video"></i> Lecteur 1 (Dood)
+        </button>
+        <button class="player-button" data-player-id="streamtape">
+            <i class="fas fa-video"></i> Lecteur 2 (Streamtape)
+        </button>
+    </div>
+    <div class="video-responsive-container">
+        <div class="video-play-overlay" id="video-play-overlay">
+            <i class="fas fa-play play-icon-lg"></i>
+        </div>
+        
+         <iframe id="video-iframe-player" 
+                loading="lazy" 
+                decoding="async"
+
+                src="" 
+                allow="autoplay; fullscreen" 
+                allowfullscreen 
+                title="Lecteur vidéo Narnia 2"
+                width="100%" 
+                height="100%">
+        </iframe>
+        
+        <div class="video-loading" id="video-loading-player" style="display: none;">
+            <i class="fas fa-spinner fa-spin loading-pulse"></i>
+            <p>Chargement de la vidéo...</p>
+        </div>
+    </div>
+</section>
+
+<!-- === ADSTERRA NATIVE BANNER === -->
+<div style="text-align:center; margin:30px 0;">
+  <script async="async" data-cfasync="false" src="//imbueprescriptionhumiliation.com/932dda4fc02a806bb59c2f6d19cefe46/invoke.js"></script>
+  <div id="container-932dda4fc02a806bb59c2f6d19cefe46"></div>
+</div>
+<!-- === /ADSTERRA NATIVE BANNER === -->
+
+  
+  <section class="film-list-section suggested-films">
+    <h3>Films Kabyles Similaires</h3>
+    <div class="film-grid">
+        <a href="qezbul1.html" class="film-card">
+            <article>
+                <div class="film-poster"><img src="../images/qezbul 1.jpg" alt="Qezbul 1 - Film comédie kabyle" loading="lazy"></div>
+                <div class="film-info"><h4>Qezbul 1</h4><p>Comédie, 83 min</p></div>
+            </article>
+        </a>
+        <a href="pucci2.html" class="film-card">
+             <article>
+                 <div class="film-poster"><img src="../images/pucci2.jpg" alt="Pucci 2 - Film comédie kabyle" loading="lazy"></div>
+                 <div class="film-info"><h4>Pucci 2</h4><p>Comédie, 121 min</p></div>
+            </article>
+        </a>
+        <a href="limucucu1.html" class="film-card">
+            <article>
+                <div class="film-poster"><img src="../images/li mucucu 1.jpg" alt="Li Mucucu 1 - Film comédie kabyle" loading="lazy"></div>
+                <div class="film-info"><h4>Li Mucucu 1</h4><p>Comédie, 74 min</p></div>
+            </article>
+        </a>
+    </div>
+    <div style="text-align: center; margin-top: 40px;">
+        <a href="../films.html" class="cta-button">
+            <i class="fas fa-film"></i> Explorer Tous les Films
+        </a>
+    </div>
+  </section>
+
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Movie",
+    "name": "Crek 1",
+    "description": "Film fantastique Comédie kabyle Crek 1 - Film animation en kabyle",
+    "image": "https://amazigh-tv.vercel.app/images/kiki.jpg",
+    "duration": "PT127M",
+    "genre": "Fantasy, Comédie",
+    "datePublished": "2001",
+    "actor": [
+      {
+        "@type": "Person",
+        "name": "Acteurs Kabyles"
+      }
+    ]
+  }
   </script>
+</main>
+
+<footer class="footer">
+    <div class="footer-content">
+        <p>&copy; 2025 Amazigh TV. Tous droits réservés.</p>
+        <p>Cinéma Kabyle en streaming gratuit</p>
+    </div>
+</footer>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
+
+    // Liens des lecteurs vidéo
+    const videoLinks = {
+        'dood': 'https://dsvplay.com/e/nkcjo31n59ax', 
+        'streamtape': 'https://streamtape.com/e/P9avZje4apT0apz'
+    };
+
+    // Sélecteurs
+    const playOverlay = document.getElementById('video-play-overlay');
+    const videoLoading = document.getElementById('video-loading-player');
+    let videoIframe = document.getElementById('video-iframe-player');
+    const playerButtons = document.querySelectorAll('.player-button');
+    const playButton = document.querySelector('.hero-play-button');
+
+    const SMARTLINK_URL = 'https://imbueprescriptionhumiliation.com/ijcn0tcyjj?key=cc5f2bbcbb55b25a23202ca173f6a468';
+
+    let activePlayer = 'dood';
+
+    // Fonction pour mettre à jour l'iframe
+    function updateIframeSource() {
+        const link = videoLinks[activePlayer];
+        if (!link) {
+            console.error(`Lien non configuré pour ${activePlayer}`);
+            videoLoading.style.display = 'none';
+            playOverlay.style.display = 'flex';
+            return;
+        }
+
+        playOverlay.style.display = 'none';
+        videoLoading.style.display = 'flex';
+
+        if (videoIframe) videoIframe.src = 'about:blank';
+
+        const newIframe = document.createElement('iframe');
+        newIframe.id = 'video-iframe-player';
+        newIframe.src = link;
+        newIframe.setAttribute('loading', 'lazy');
+        newIframe.setAttribute('decoding', 'async');
+        newIframe.allow = 'autoplay; fullscreen; encrypted-media';
+        newIframe.allowFullscreen = true;
+        newIframe.style.width = '100%';
+        newIframe.style.height = '100%';
+        newIframe.style.border = 'none';
+
+        const container = videoIframe.parentNode;
+        container.replaceChild(newIframe, videoIframe);
+        videoIframe = newIframe;
+
+        const loadingTimeout = setTimeout(() => { videoLoading.style.display = 'none'; }, 8000);
+
+        videoIframe.onload = () => {
+            clearTimeout(loadingTimeout);
+            videoLoading.style.display = 'none';
+        };
+        videoIframe.onerror = () => {
+            clearTimeout(loadingTimeout);
+            videoLoading.style.display = 'none';
+            alert('Lecteur bloqué ou indisponible. Essaie l\'autre lecteur.');
+        };
+    }
+
+    // Changement de lecteur
+    playerButtons.forEach(button => {
+        button.addEventListener('click', function() {
+            playerButtons.forEach(btn => btn.classList.remove('active'));
+            this.classList.add('active');
+            activePlayer = this.dataset.playerId;
+            updateIframeSource();
+        });
+    });
+
+    // Fonction déclencheur du bouton
+    function launchVideo() {
+        updateIframeSource();
+        window.open(SMARTLINK_URL, '_blank');
+
+        const videoSection = document.querySelector('.video-section');
+        if (videoSection) {
+            videoSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
+        }
+    }
+
+    if (playButton) playButton.addEventListener('click', launchVideo);
+    if (playOverlay) playOverlay.addEventListener('click', launchVideo);
+
+});
+</script>
+
+
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/a0/de/52/a0de529083a01b3b72e7e46c528c84ef.js'></script>
+
+<script type='text/javascript' src='//imbueprescriptionhumiliation.com/1a/84/8b/1a848bcee8d4bae2bf2bd81b1d7c5873.js'></script>
+
+
+
 </body>
+
 </html>
