--- a/films/qezbul1.html
+++ b/films/qezbul1.html
@@ -393,7 +393,7 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // Liens des lecteurs vidéo
     const videoLinks = {
-        'dood': 'https://dsvplay.com/e/za8jrxvpw6rq', 
+        'dood': 'https://streamhg.com/e/yt3txh0bxhtm', 
         'streamtape': 'https://streamtape.com/e/QbgypGOLYAH99m'
     };
 
