--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -297,36 +297,22 @@
   </section>
 
 <section class="video-section">
-    <h3>Regarder Pucci 1 en Streaming HD</h3> <div class="player-selector" id="player-selector">
-        <button class="player-button active" data-player-id="dood">
-            <i class="fas fa-video"></i> Lecteur 1 (Dood)
-        </button>
-        <button class="player-button" data-player-id="streamtape">
-            <i class="fas fa-video"></i> Lecteur 2 (Streamtape)
-        </button>
-    </div>
-    <div class="video-responsive-container">
-        <div class="video-play-overlay" id="video-play-overlay">
-            <i class="fas fa-play play-icon-lg"></i>
-        </div>
-        
-      <iframe id="video-iframe-player" 
-                loading="lazy" 
-                decoding="async"
-               
-                src="" 
-                allow="autoplay; fullscreen" 
-                allowfullscreen 
-                title="Lecteur vidéo Crek 1"
-                width="100%" 
-                height="100%">
-        </iframe>
-        <div class="video-loading" id="video-loading-player" style="display: none;">
-            <i class="fas fa-spinner fa-spin loading-pulse"></i>
-            <p>Chargement de la vidéo...</p>
-        </div>
+    <h3>Regarder Pucci 1 en Streaming HD</h3> 
+    <div id="video-container" style="position:relative; width:100%; max-width:900px; margin:auto;">
+      <!-- Overlay -->
+      <div id="video-overlay" style="position:absolute;top:0;left:0;width:100%;height:100%;
+           background:rgba(0,0,0,0.6);display:flex;justify-content:center;align-items:center;cursor:pointer;z-index:2;">
+        <i class="fas fa-play" style="font-size:5em;color:#fff;"></i>
+      </div>
+
+      <!-- Player -->
+      <video id="custom-video" width="100%" height="auto" controls style="display:block;">
+        <source src="https://hglink.to/e/j9tsobh2m54t" type="video/mp4">
+        Votre navigateur ne supporte pas le HTML5 vidéo.
+      </video>
     </div>
 </section>
+
   
 <!-- === ADSTERRA NATIVE BANNER === -->
 <div style="text-align:center; margin:30px 0;">
@@ -479,6 +465,26 @@ document.addEventListener('DOMContentLoaded', () => {
     if (playButton) playButton.addEventListener('click', launchVideo);
     if (playOverlay) playOverlay.addEventListener('click', launchVideo);
 
+});
+</script>
+
+<script>
+const video = document.getElementById('custom-video');
+const overlay = document.getElementById('video-overlay');
+
+overlay.addEventListener('click', () => {
+  video.play();
+  overlay.style.display = 'none';
+});
+
+video.addEventListener('dblclick', () => {
+  if (video.requestFullscreen) video.requestFullscreen();
+  else if (video.webkitRequestFullscreen) video.webkitRequestFullscreen();
+  else if (video.mozRequestFullScreen) video.mozRequestFullScreen();
+});
+
+video.addEventListener('ended', () => {
+  overlay.style.display = 'flex';
 });
 </script>
 
