--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -154,6 +154,24 @@
         margin-right: 12px; 
     }
 
+    .video-responsive-container {
+    position: relative;
+    width: 100%;
+    height: 0;
+    padding-bottom: 56.25%; /* Ratio 16:9 */
+    background: #000;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.video-responsive-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+}
     /* Overlay vidéo */
     #video-play-overlay {
         position: absolute;
@@ -392,25 +410,31 @@
     </div>
 </footer>
 
+// Remplacer toute la section script par ceci :
+
 <script>
 document.addEventListener('DOMContentLoaded', () => {
-
-    // Liens des lecteurs vidéo
     const videoLinks = {
         'dood': 'https://hglink.to/e/j9tsobh2m54t', 
         'streamtape': 'https://streamtape.com/e/JYm93KBoPYIjM7J'
     };
 
-    // Sélecteurs
     const playOverlay = document.getElementById('video-play-overlay');
     const videoLoading = document.getElementById('video-loading-player');
-    let videoIframe = document.getElementById('video-iframe-player');
+    const videoIframe = document.getElementById('video-iframe-player');
     const playerButtons = document.querySelectorAll('.player-button');
     const playButton = document.querySelector('.hero-play-button');
 
-   
-
     let activePlayer = 'dood';
+    let videoStarted = false;
+
+    // Précharger le premier lecteur
+    function preloadFirstPlayer() {
+        const firstLink = videoLinks[activePlayer];
+        if (firstLink && videoIframe) {
+            videoIframe.src = firstLink;
+        }
+    }
 
     // Fonction pour mettre à jour l'iframe
     function updateIframeSource() {
@@ -424,30 +448,28 @@ document.addEventListener('DOMContentLoaded', () => {
 
         playOverlay.style.display = 'none';
         videoLoading.style.display = 'flex';
+        videoStarted = true;
 
-        if (videoIframe) videoIframe.src = 'about:blank';
+        // Utiliser directement l'iframe existante
+        videoIframe.src = link;
+        videoIframe.style.display = 'block';
 
-        const newIframe = document.createElement('iframe');
-        newIframe.id = 'video-iframe-player';
-        newIframe.src = link;
-        newIframe.setAttribute('loading', 'lazy');
-        newIframe.setAttribute('decoding', 'async');
-        newIframe.allow = 'autoplay; fullscreen; encrypted-media';
-        newIframe.allowFullscreen = true;
-        newIframe.style.width = '100%';
-        newIframe.style.height = '100%';
-        newIframe.style.border = 'none';
-
-        const container = videoIframe.parentNode;
-        container.replaceChild(newIframe, videoIframe);
-        videoIframe = newIframe;
-
-        const loadingTimeout = setTimeout(() => { videoLoading.style.display = 'none'; }, 8000);
+        const loadingTimeout = setTimeout(() => { 
+            videoLoading.style.display = 'none'; 
+        }, 5000);
 
         videoIframe.onload = () => {
             clearTimeout(loadingTimeout);
             videoLoading.style.display = 'none';
+            
+            // Forcer le plein écran après chargement
+            try {
+                videoIframe.contentWindow.focus();
+            } catch (e) {
+                console.log("Focus impossible pour des raisons de sécurité");
+            }
         };
+
         videoIframe.onerror = () => {
             clearTimeout(loadingTimeout);
             videoLoading.style.display = 'none';
@@ -467,18 +489,22 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // Fonction déclencheur du bouton
     function launchVideo() {
-        updateIframeSource();
-   
+        if (!videoStarted) {
+            updateIframeSource();
+        }
 
         const videoSection = document.querySelector('.video-section');
         if (videoSection) {
-            videoSection.scrollIntoView({ behavior: 'smooth', block: 'center' });
+            videoSection.scrollIntoView({ behavior: 'smooth', block: 'start' });
         }
     }
 
+    // Événements
     if (playButton) playButton.addEventListener('click', launchVideo);
     if (playOverlay) playOverlay.addEventListener('click', launchVideo);
 
+    // Précharger au chargement de la page
+    preloadFirstPlayer();
 });
 </script>
 
