--- a/films/pucci1.html
+++ b/films/pucci1.html
@@ -15,7 +15,9 @@
   <meta property="og:type" content="video.movie">
   <meta name="keywords" content="film kabyle, cinema amazigh, streaming gratuit, pucci1, qezbul, li mucucu">
   <meta name="author" content="Amazigh TV">
-  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
+
   <link rel="canonical" href="https://amazigh-tv.site/films/pucci1.html">
   <link rel="stylesheet" href="../style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1yOQ/Lp02H1lq1+8YcR/Wk80zL0c/s11D4n5bJkU5l0O7tY5U/PzG0h1O1h5zO7Wk5vA7r5/j4g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
